# arctos

./: arctos_hardware.cpp
arctos_bringup/: CMakeLists.txt
arctos_bringup/launch/: arctos_bringup.launch.py  controller.launch.py
arctos_description/: CMakeLists.txt  package.xml
arctos_description/config/: arctos.srdf  arctos.urdf  arctos_controller.yaml  initial_positions.yaml  ros2_controllers.yaml
arctos_description/ros2_control/: arctos.ros2_control.xacro
arctos_description/srdf/: arctos.srdf
arctos_description/urdf/: arctos.ros2_control.xacro  arctos.urdf  arctos.urdf.xacro  arctos.xacro  arctos_gripper.xacro  joint_link.xacro
arctos_hardware_interface/: CMakeLists.txt  arctos_hardware_interface.xml  package.xml
arctos_hardware_interface/bringup/config/: arctos_controller.yaml
arctos_hardware_interface/bringup/launch/: arctos_controller.launch.py
arctos_hardware_interface/config/: arctos_controller.yaml
arctos_hardware_interface/controller/: arctos_controller.cpp
arctos_hardware_interface/controller/include/arctos_hardware_interface/: arctos_controller.hpp
arctos_hardware_interface/description/launch/: view_arctos.launch.py
arctos_hardware_interface/hardware/: arctos_hardware.cpp
arctos_hardware_interface/hardware/include/arctos_hardware_interface/: arctos_hardware.hpp
arctos_hardware_interface/include/arctos_hardware_interface/: arctos_interface.hpp
arctos_hardware_interface/launch/: can_interface.launch.py  controller.launch.py  spawn_controllers.launch.py
arctos_hardware_interface/ros2_control/: arctos.ros2_control.xacro
arctos_hardware_interface/src/: arctos_interface.cpp
arctos_motor_driver/: CMakeLists.txt  package.xml
arctos_motor_driver/include/: motor_driver.hpp
arctos_motor_driver/include/arctos_motor_driver/: motor_driver.hpp
arctos_motor_driver/src/: motor_driver.cpp
arctos_motor_driver_test/: CMakeLists.txt  package.xml
arctos_motor_driver_test/include/: arctos_motor_driver_test.hpp
arctos_motor_driver_test/src/: arctos_motor_driver_test.cpp
arctos_moveit_config/: .setup_assistant
arctos_moveit_config/config/: arctos.ros2_control.xacro  arctos.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
controller/: arctos_controller.cpp
